# Data_parsing_server_Part-II

expressServer/: app.js  csvParser.js  jsonParser.js  package-lock.json  package.json  txtParser.js  user.js  xmlParser.js  yamlParser.js
files/: file11.xml  file22.json  file33.yaml  file44.csv  file55.txt
python/: README.md  pyproject.toml  python_server.py
