[tool.poetry]
name = "python_parser"
version = "0.1.0"
description = ""
authors = ["Rasmus <rasmusorum@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pyyaml = "^6.0.1"
uvicorn = "^0.27.1"
fastapi = "^0.109.2"
requests = "^2.31.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
